--- a/ShowKitHelpDesk/Info.plist
+++ b/ShowKitHelpDesk/Info.plist
@@ -28,6 +28,11 @@
 	<array>
 		<string>FontAwesome.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>voip</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
